# discord-chatbot

./: .gitignore  Cargo.toml  README.md
chatbot_macros/: Cargo.toml
chatbot_macros/src/: lib.rs
src/: bot.rs  main.rs
src/bot/: mod.rs
src/bot/profanity_filter/: mod.rs
src/error_views/: mod.rs
src/module_status/: mod.rs
src/types/: mod.rs
src/util/: mod.rs
